--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lowdb": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^3.28.9",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
@@ -21,7 +22,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +51,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.4.0",
+    "@types/yup": "^0.26.26",
     "babel-loader": "^8.0.6",
     "prettier": "^1.19.1"
   }
