--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2",
+    "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -51,6 +52,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.4.0",
+    "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.26",
     "babel-loader": "^8.0.6",
     "prettier": "^1.19.1"
