--- a/package.json
+++ b/package.json
@@ -3,20 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
-    "@types/react": "16.9.13",
-    "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
     "lowdb": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.28.9",
     "react-redux": "^7.1.3",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -49,6 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
     "@types/lowdb": "^1.0.9",
     "@types/react-redux": "^7.1.5",
     "@types/redux-logger": "^3.0.7",
