--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.28.9",
+    "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.2.0",
@@ -43,10 +44,11 @@
   },
   "devDependencies": {
     "@types/jest": "24.0.23",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
-    "@types/lowdb": "^1.0.9",
+    "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.4.0",
