--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.2.0",
+    "react-use": "^13.10.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
